Correct size issue for individual recipes on small device screens

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -215,9 +215,14 @@ body {
 
 .recipe-img > img {
     max-height: 450px;
-    width: 450px;
+    max-width: 450px;
 }
 
+@media screen and (max-width: 500px) {
+    .recipe-img > img {
+        width: 100%;
+    }
+}
 
 footer {
     margin-top: auto;
